@@ -1,5 +1,8 @@
 1999-04-28  Jim Kingdon  <http://www.cyclic.com>
 
+	* sanity.sh (devcom3): Add some tests of the CVS/Notify file and
+	disconnected "cvs edit".
+
 	* main.c (opt_usage): Remove -b.
 
 1999-04-20 Derek Price
